@@ -43,3 +43,4 @@
   * FIX: Token responses now work despite of the token/secret order
   * FEATURE: Added Foursquare OAuth 2.0 Api (thanks Tom Tasche)
   * FEATURE: Added support for OAuth1.0a signatures via querystring parameters
+  * FEATURE: Added ConstantContact Api (thanks Matthew Laudato)
